force-app/main/default/objects/Document_Generation_Log__c/Document_Generation_Log__c.object-meta.xml
<CustomObject>
    <label>Document Generation Log</label>
    <nameField>
        <displayFormat>#{DD}/{MM}/{YYYY}: {0}</displayFormat>
        <label>Document Generation Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Generation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>