force-app/main/default/objects/Document_Generation_Log__c/fields/Complete_Log__c.field-meta.xml
<CustomField>
    <fullName>Complete_Log__c</fullName>
    <label>Complete Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>