force-app/main/default/objects/Document_Generation_Log__c/fields/Current_Signer_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Signer_Count__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>Current Signer Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>