force-app/main/default/objects/Document_Generation_Log__c/fields/Document_Require_E_Signature__c.field-meta.xml
<CustomField>
    <fullName>Document_Require_E_Signature__c</fullName>
    <formula>Template_Record__r.Document_Require_E_Signature__c</formula>
    <label>Document Require E-Signature</label>
    <type>Checkbox</type>
</CustomField>