force-app/main/default/objects/Document_Generation_Log__c/fields/Invalid_Document__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Document</label>
    <type>Checkbox</type>
</CustomField>