force-app/main/default/objects/Document_Generation_Log__c/fields/Latest_ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>Latest_ContentVersion_Id__c</fullName>
    <label>Latest ContentVersion Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>