force-app/main/default/objects/Document_Generation_Log__c/fields/Maximum_Signer__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Signer__c</fullName>
    <label>Maximum Signer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>