force-app/main/default/objects/Document_Generation_Log__c/fields/OTP_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>OTP_Request_Time__c</fullName>
    <label>OTP Request Time</label>
    <type>DateTime</type>
</CustomField>