force-app/main/default/objects/Document_Generation_Log__c/fields/Post_Processing_Email__c.field-meta.xml
<CustomField>
    <fullName>Post_Processing_Email__c</fullName>
    <formula>Template_Record__r.Receiver_Email__c</formula>
    <label>Post Processing Email</label>
    <type>Text</type>
</CustomField>