force-app/main/default/objects/Document_Generation_Log__c/fields/Post_Signature_Processing__c.field-meta.xml
<CustomField>
    <fullName>Post_Signature_Processing__c</fullName>
    <formula>TEXT(Template_Record__r.Template_Output__c)</formula>
    <label>Post Signature Processing</label>
    <type>Text</type>
</CustomField>