force-app/main/default/objects/Document_Generation_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Generated</fullName>
            </value>
            <value>
                <fullName>Document Sent on Email</fullName>
            </value>
            <value>
                <fullName>Document Signing Completed</fullName>
            </value>
            <value>
                <fullName>Document Signing Pending</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>