force-app/main/default/objects/Document_Generation_Log__c/fields/Template_Record__c.field-meta.xml
<CustomField>
    <fullName>Template_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Record</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Document Generation Logs</relationshipLabel>
    <relationshipName>Document_Generation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>